--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,3 @@
-<link rel="shortcut icon" type="image/png" href="robotz.png">
+<head>
+    <link rel="shortcut icon" type="image/png" href="robotz.png">
+</head>
